Keep 1.4 JDK compatability.